--- a/chsites/templates/chart/index.html
+++ b/chsites/templates/chart/index.html
@@ -9,29 +9,29 @@
           <div class="row">
             <div class="col-md-12 sectionkoleksi">
               <span class="divkoleksi divkarya">
-                <h3>Collections</h3>
+                <h3>集合</h3>
               </span>
               <div class="sectionfilter">
                 <div class="filterkarya">
-                  <label class="filtermenu" style="padding: 0; font-size: smaller; color: #3c4a50">Filter</label>
+                  <label class="filtermenu" style="padding: 0; font-size: smaller; color: #3c4a50">过滤</label>
 
 
                   <div class="filtermenu jeniskarya " method="get">
-                    <a id="link1">Types of arts objects +</a>
+                    <a id="link1">艺术品的类型 +</a>
                     <ul id="jenisbenda" class="jenisbenda" name="featured">
-                      <li value="Lukisan"><a href="{% url 'Painting-list' %}">Paintings</a></li>
-                      <li value="Patung"><a href="{% url 'Statue-list' %}">Statues</a></li>
-                      <li value="Kriya"><a href="{% url 'Craft-list' %}">Handicrafts</a></li>
+                      <li value="Lukisan"><a href="{% url 'Painting-list' %}">绘画</a></li>
+                      <li value="Patung"><a href="{% url 'Statue-list' %}">雕像</a></li>
+                      <li value="Kriya"><a href="{% url 'Craft-list' %}">手工业</a></li>
                     </ul>
                   </div>
                   <div class="filtermenu temakarya">
-                    <a id="link2">Themes +</a>
+                    <a id="link2">主题 +</a>
                     <ul id="jenistema" class="jenisbenda">
-                     <li><a href="{% url 'potrait-list' %}">Potraits and Sensuality</a></li>
-                      <li><a href="{% url 'nature-list' %}">Still Life</a></li>
-                      <li><a href="{% url 'landscape-list' %}">Landscape</a></li>
-                      <li><a href="{% url 'heroes-list' %}">War scenes and Potraits of Heroes</a></li>
-                      <li><a href="{% url 'tradition-list' %}">Tradition/Culture/Mythology/Daily Activities</a></li>
+                     <li><a href="{% url 'potrait-list' %}">肖像和性感</a></li>
+                      <li><a href="{% url 'nature-list' %}">静物</a></li>
+                      <li><a href="{% url 'landscape-list' %}">景观</a></li>
+                      <li><a href="{% url 'heroes-list' %}">战争场面和英雄肖像</a></li>
+                      <li><a href="{% url 'tradition-list' %}">传统/文化/神话/日常活动</a></li>
                     </ul>
                   </div>
 
