--- a/ensites/templates/palace/istanamerdeka.html
+++ b/ensites/templates/palace/istanamerdeka.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "enbase.html" %}
 {% load static %}
 {% block css %}
 <link href="{% static 'css/detail.css' %}" rel="stylesheet">
