--- a/singgasanaseni/templates/base.html
+++ b/singgasanaseni/templates/base.html
@@ -38,7 +38,7 @@
       <nav class="navbar cbp-hsmenu-wrapper" id="cbp-hsmenu-wrapper">
         <div class="container-fluid">
            <div class="navbar-header">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="{% url 'homepage-views' %}">
               <img src="{% static 'img/logo.jpg' %}">
             </a>
           </div>
@@ -47,7 +47,7 @@
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                   <i class="fa fa-bars menures"></i>
             </a>
-            <a href="#" class="logores">
+            <a href="{% url 'homepage-views' %}" class="logores">
               <img src="{% static 'img/logo.jpg' %}">
             </a>
 
@@ -77,7 +77,7 @@
               <li><a href="#">Publikasi</a></li>
               <li><a href="{% url 'berita-list' %}">Berita</a></li>
               <li><a href="{% url 'tentang-kami' %}">Tentang Kami</a></li>
-              <li><a href="{% url 'searching' %}"><i class="fa fa-search"></i></a></li>
+              <li><a href="{% url 'cari' %}"><i class="fa fa-search"></i></a></li>
 
             </ul>
             </div>
@@ -99,7 +99,7 @@
           <a href="/sitemap.xml">Sitemap</a>
         </span>
         <span class="rightfoot">
-            <label><label><a href="{% url 'homepage-en' %}">EN </a>/<a href="{% url 'homepage-views' %}"> ID</a></label></label>
+            <label><a href="{% url 'homepage-ch' %}">CH</a>/<a href="{% url 'homepage-en' %}">EN</a>/<a href="{% url 'homepage-views' %}">ID</a></label>
             <a href="#"><img src="{% static 'img/facebook.jpg' %}"></a>
             <a href="#"><img src="{% static 'img/instagram.jpg' %}"></a>
         </span>
