--- a/singgasanaseni/templates/index.html
+++ b/singgasanaseni/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "chbase.html" %}
+{% extends "base.html" %}
 
 {% load static %}
 
@@ -58,28 +58,28 @@
           <div class="row ">
             <div class="col-md-12 sectionkoleksi">
               <span class="divkoleksi">
-                <h3>集合</h3>
-                <a href="{% url 'karya-list' %}">查看全部</a>
+                <h3>Koleksi</h3>
+                <a href="{% url 'karya-list' %}">View All</a>
               </span>
             </div>
             <div class="col-md-12 sectionkoleksi sectionkoleksilist">
               <div class="row">
                     <div class="col-md-4">
-                      <a href="{% url 'Painting-list' %}">
+                      <a href="/koleksi/lukisan/">
                         <img src="{% static 'img/lukisan.jpeg' %}" class="koleksiimg">
-                        <label class="koleksilabel">绘画</label>
+                        <label class="koleksilabel">Lukisan</label>
                       </a>
                     </div>
                     <div class="col-md-4">
-                      <a href="{% url 'Statue-list' %}">
+                      <a href="koleksi/patung/">
                         <img src="{% static 'img/patung.jpeg' %}" class="koleksiimg">
-                        <label class="koleksilabel">雕像</label>
+                        <label class="koleksilabel">Patung</label>
                       </a>
                     </div>
                     <div class="col-md-4">
-                      <a href="{% url 'Craft-list' %}">
+                      <a href="/koleksi/kriya/">
                         <img src="{% static 'img/kriya.jpeg' %}" class="koleksiimg">
-                        <label class="koleksilabel">手艺</label>
+                        <label class="koleksilabel">Kriya</label>
                       </a>
                     </div>
               </div>
@@ -91,8 +91,8 @@
           <div class="row">
             <div class="col-md-12 sectionkoleksi">
               <span class="divkoleksi">
-                <h3>新闻</h3>
-                <a href="{% url 'news-list'  %}">查看全部</a>
+                <h3>Berita</h3>
+                <a href="{% url 'news-list'  %}">View All</a>
               </span>
             </div>
             <div class="col-md-12 sectionkoleksi sectionkoleksilist">
@@ -122,8 +122,8 @@
         <div class="row">
             <div class="col-md-12 sectionkoleksi">
               <span class="divkoleksi">
-                <h3>艺术家</h3>
-                <a href="{% url 'painter-list' %}">查看全部</a>
+                <h3>Perupa</h3>
+                <a href="{% url 'Perupa-list' %}">View All</a>
               </span>
             </div>
 
@@ -132,17 +132,17 @@
               <div class="row">
 
                     <div class="listperupa">
-                      <a href="/en/artists/12/">
+                      <a href="/perupa/12/">
                         <img src="{% static 'img/homeartist1.jpg' %}" class="koleksiimg" style="width: 500px; height: 500px">
                       </a>
                     </div>
                     <div class="listperupa">
-                      <a href="/en/artists/9/">
+                      <a href="/perupa/9/">
                         <img src="{% static 'img/homeartist2.jpg' %}" class="koleksiimg" style="width: 500px; height: 500px">
                       </a>
                     </div>
                     <div class="listperupa">
-                      <a href="/en/artists/13/">
+                      <a href="/perupa/13/">
                         <img src="{% static 'img/homeartist3.jpg' %}" class="koleksiimg" style="width: 500px; height: 500px">
                       </a>
                     </div>
