perbaikan kata-kata bahasa mandarin

--- a/chsites/templates/chart/index.html
+++ b/chsites/templates/chart/index.html
@@ -19,19 +19,19 @@
                   <div class="filtermenu jeniskarya " method="get">
                     <a id="link1">艺术品的类型 +</a>
                     <ul id="jenisbenda" class="jenisbenda" name="featured">
-                      <li value="Lukisan"><a href="{% url 'Painting-list' %}">绘画</a></li>
-                      <li value="Patung"><a href="{% url 'Statue-list' %}">雕像</a></li>
-                      <li value="Kriya"><a href="{% url 'Craft-list' %}">手工业</a></li>
+                      <li value="Lukisan"><a href="{% url 'Painting-list-ch' %}">绘画</a></li>
+                      <li value="Patung"><a href="{% url 'Statue-list-ch' %}">雕像</a></li>
+                      <li value="Kriya"><a href="{% url 'Craft-list-ch' %}">手工业</a></li>
                     </ul>
                   </div>
                   <div class="filtermenu temakarya">
                     <a id="link2">主题 +</a>
                     <ul id="jenistema" class="jenisbenda">
-                     <li><a href="{% url 'potrait-list' %}">肖像和性感</a></li>
-                      <li><a href="{% url 'nature-list' %}">静物</a></li>
-                      <li><a href="{% url 'landscape-list' %}">景观</a></li>
-                      <li><a href="{% url 'heroes-list' %}">战争场面和英雄肖像</a></li>
-                      <li><a href="{% url 'tradition-list' %}">传统/文化/神话/日常活动</a></li>
+                     <li><a href="{% url 'potrait-list-ch' %}">肖像和性感</a></li>
+                      <li><a href="{% url 'nature-list-ch' %}">静物</a></li>
+                      <li><a href="{% url 'landscape-list-ch' %}">景观</a></li>
+                      <li><a href="{% url 'heroes-list-ch' %}">战争场面和英雄肖像</a></li>
+                      <li><a href="{% url 'tradition-list-ch' %}">传统/文化/神话/日常活动</a></li>
                     </ul>
                   </div>
 
