--- a/chsites/templates/artist/detail.html
+++ b/chsites/templates/artist/detail.html
@@ -14,7 +14,7 @@
                 <div class="col-md-5 profildetail">
                     <h2>{{ Perupa.Nama }}</h2>
                     <p><i>{{ Perupa.Panggilan }}</i></p>
-                    <label>{{ Perupa.Tanggal_Lahir | date:"d M Y"  }} - {{ Perupa.Tanggal_Wafat |date:"d M Y"  }}</label>
+                    <label>{{ Perupa.Tempat_Lahir }} {{ Perupa.Tanggal_Lahir }} - {{ Perupa.Tempat_Wafat }} {{ Perupa.Tanggal_Wafat }}</label>
                     <p>{{ total }} Lukisan</p>
 
                       <div class="panel-wrapper">
