--- a/ensites/templates/art/index.html
+++ b/ensites/templates/art/index.html
@@ -73,7 +73,7 @@
               <div class="row seckarya">
                   {% for Karya in karya %}
                   <div class="col-md-3 perupalist karyalist">
-                    <a href="/karya/{{ Karya.id }}">
+                    <a href="/en/artworks/{{ Karya.id }}">
                       <img src="/media/{{ Karya.Gambar }}" class="">
                         <figcaption>
                            <h3>{{ Karya.Judul }}</h3>
