--- a/ensites/templates/artists/detail.html
+++ b/ensites/templates/artists/detail.html
@@ -15,13 +15,13 @@
                     <h2>{{ Perupa.Nama }}</h2>
                     <p><i>{{ Perupa.Panggilan }}</i></p>
                     <label>{{ Perupa.Tempat_Lahir }} {{ Perupa.Tanggal_Lahir }} - {{ Perupa.Tempat_Wafat }} {{ Perupa.Tanggal_Wafat }}</label>
-                    <p>{{ total }} Lukisan</p>
+                    <p>{{ total }} Artworks</p>
 
                       <div class="panel-wrapper">
                         <a href="#show" class="show" id="show">[show full text +]</a>
                         <a href="#hide" class="hide" id="hide">[hide text -]</a>
                         <div class="panel">
-                            {{ Perupa.Keterangan }}
+                            {{ Perupa.Description }}
                         </div>
                         <div class="fade"></div>
                       </div>
