--- a/ensites/templates/enbase.html
+++ b/ensites/templates/enbase.html
@@ -112,12 +112,12 @@
         </div>
         <div class="col-md-2">
           <ul class="linkfooter nopad">
-            <li><a href="{% url 'Perupa-list' %}">PERUPA</a></li>
-            <li><a href="{% url 'karya-list' %}">GALERI</a></li>
-            <li><a href="{% url 'istana-negara' %}">ISTANA</a></li>
-            <li><a href="#">PUBLIKASI</a></li>
-            <li><a href="{% url 'berita-list' %}">BERITA</a></li>
-            <li><a href="{% url 'tentang-kami' %}">TENTANG KAMI</a></li>
+            <li><a href="{% url 'artist-list' %}">ARTISTS</a></li>
+            <li><a href="{% url 'art-list' %}">GALLERY</a></li>
+            <li><a href="{% url 'palace-negara' %}">PALACES</a></li>
+            <li><a href="#">PUBLICATION</a></li>
+            <li><a href="{% url 'news-list' %}">NEWS</a></li>
+            <li><a href="{% url 'aboutus' %}">ABOUT US</a></li>
           </ul>
         </div>
         <div class="col-md-3 borderfooter thcolumn">
@@ -135,11 +135,11 @@
           </span>
         </div>
         <div class="col-md-2 text-right lscolumn">
-          <h4>BAHASA</h4><br>
+          <h4>LANGUAGES</h4><br>
           <span>
-            <a href="#">Indonesia</a><br>
-            <a href="#">English</a><br>
-            <a href="#">China</a><br>
+            <a href="/">Indonesia</a><br>
+            <a href="/en">English</a><br>
+            <a href="/ch">China</a><br>
           </span>
         </div>
       </div>
