--- a/singgasanaseni/templates/base.html
+++ b/singgasanaseni/templates/base.html
@@ -140,9 +140,9 @@
         <div class="col-md-2 text-right lscolumn">
           <h4>BAHASA</h4><br>
           <span>
-            <a href="#">Indonesia</a><br>
-            <a href="#">English</a><br>
-            <a href="#">China</a><br>
+            <a href="/">Indonesia</a><br>
+            <a href="/en">English</a><br>
+            <a href="/ch">China</a><br>
           </span>
         </div>
       </div>
