perbaikan bug di bahasa inggris dan china

--- a/chsites/templates/artist/detail.html
+++ b/chsites/templates/artist/detail.html
@@ -51,7 +51,7 @@
               <div class="row seckarya">
                   {% for karya in Karyarelated %}
                   <div class="col-md-3 perupalist karyalist">
-                    <a href="/karya/{{ karya.id }}" class="sample1">
+                    <a href="/ch/artworks/{{ karya.id }}" class="sample1">
                       <img src="/media/{{ karya.Gambar }}" class="">
                         <figcaption>
                            <h3>{{ karya.Judul }}</h3>
