--- a/ensites/templates/enbase.html
+++ b/ensites/templates/enbase.html
@@ -38,7 +38,7 @@
         <div class="container-fluid">
            <div class="navbar-header">
             <a class="navbar-brand" href="{% url 'homepage-en' %}">
-              <img src="{% static 'img/logo.jpg' %}">
+              <img src="{% static 'img/logo.png' %}">
             </a>
           </div>
 
@@ -125,16 +125,15 @@
           <a href="#" class="brown">Terms Of Services</a><br>
           <a href="#" class="brown">Privacy Policy</a><br>
         </div>
-        <div class="col-md-2 borderfooter fhcolumn">
+        <div class="col-md-2 borderfooter text-center fhcolumn">
           <h4>FOLLOW US</h4><Br>
           <span>
             <a href="#">Facebook</a><br>
             <a href="#">Twitter</a><br>
-            <a href="#">Instagram</a><br>
-            <a href="#">Rss</a>
+            <a href="#">Instagram</a>
           </span>
         </div>
-        <div class="col-md-2 text-right lscolumn">
+        <div class="col-md-2 text-center lscolumn">
           <h4>LANGUAGES</h4><br>
           <span>
             <a href="/">Indonesia</a><br>
