--- a/singgasanaseni/templates/karya/detail.html
+++ b/singgasanaseni/templates/karya/detail.html
@@ -17,12 +17,12 @@
             <div class="col-md-6">
                 <img class=" imgdetail " src="/media/{{ Karya.Gambar }}" alt="">
             </div>
-            <div class="col-md-3" style="padding-left: 10%;">
+            <div class="col-md-5" style="padding-left: 10%;">
                 <div class="centered">
-                    <h5 style="font-size: 1.7rem;"><a href="/perupa/{{ Karya.Perupa_id }}">{{ Karya.Perupa }}</a></h5>
-                    <p style="font-style: italic">{{ Karya.Judul }}</p>
-                    <p style="font-size: 14px;">{{ Karya.Dimensi }}</p>
-                    <p style="font-size: 14px;">{{ Karya.Material }}</p>
+                    <h5 class="Perupadetail"><a href="/perupa/{{ Karya.Perupa_id }}">{{ Karya.Perupa }}</a></h5>
+                    <p class="Juduldetail">{{ Karya.Judul }}</p>
+                    <p class="materialdetail">{{ Karya.Dimensi }}</p>
+                    <p class="materialdetail">{{ Karya.Material }}</p>
                 </div>
 
             </div>
