--- a/singgasanaseni/templates/perupa/index.html
+++ b/singgasanaseni/templates/perupa/index.html
@@ -63,6 +63,7 @@
           <div class="row bgkarya">
              <div class="col-md-12 sectionkoleksi">
               <span class="divkoleksi" style="border: none;">
+              <h3>Halaman {{ perupa.number }}</h3>
                 <span class="pagingkarya">
                     <ul class="pagination">
                         {% if perupa.has_previous %}
