--- a/chsites/templates/artist/index.html
+++ b/chsites/templates/artist/index.html
@@ -20,39 +20,39 @@
                   <label class="filtermenu" style="padding: 0;">过滤</label>
                   <!--filter-->
                   <div class="filtermenu">
-                    <a href="{% url 'Perupa-list' %}" class="current">ALL</a>
-                    <a href="{% url 'A-kriya' %}">A</a>
-                    <a href="{% url 'B-list' %}">B</a>
-                    <a href="{% url 'C-list' %}">C</a>
-                    <a href="{% url 'D-list' %}">D</a>
-                    <a href="{% url 'E-list' %}">E</a>
-                    <a href="{% url 'F-list' %}">F</a>
-                    <a href="{% url 'G-list' %}" >G</a>
-                    <a href="{% url 'H-list' %}" >H</a>
-                    <a href="{% url 'I-list' %}" >I</a>
-                    <a href="{% url 'J-list' %}" >J</a>
-                    <a href="{% url 'K-list' %}" >K</a>
-                    <a href="{% url 'L-list' %}" >L</a>
-                    <a href="{% url 'M-list' %}" >M</a>
-                    <a href="{% url 'N-list' %}" >N</a>
-                    <a href="{% url 'O-list' %}" >O</a>
-                    <a href="{% url 'P-list' %}" >P</a>
-                    <a href="{% url 'Q-list' %}" >Q</a>
-                    <a href="{% url 'R-list' %}" >R</a>
-                    <a href="{% url 'S-list' %}" >S</a>
-                    <a href="{% url 'T-list' %}" >T</a>
-                    <a href="{% url 'U-list' %}" >U</a>
-                    <a href="{% url 'V-list' %}" >V</a>
-                    <a href="{% url 'W-list' %}" >W</a>
-                    <a href="{% url 'X-list' %}" >X</a>
-                    <a href="{% url 'Y-list' %}" >Y</a>
-                    <a href="{% url 'Z-list' %}" >Z</a>
+                    <a href="{% url 'painter-list-ch' %}" class="current">ALL</a>
+                    <a href="{% url 'A-artist-ch' %}">A</a>
+                    <a href="{% url 'B-artist-ch' %}">B</a>
+                    <a href="{% url 'C-artist-ch' %}">C</a>
+                    <a href="{% url 'D-artist-ch' %}">D</a>
+                    <a href="{% url 'E-artist-ch' %}">E</a>
+                    <a href="{% url 'F-artist-ch' %}">F</a>
+                    <a href="{% url 'G-artist-ch' %}" >G</a>
+                    <a href="{% url 'H-artist-ch' %}" >H</a>
+                    <a href="{% url 'I-artist-ch' %}" >I</a>
+                    <a href="{% url 'J-artist-ch' %}" >J</a>
+                    <a href="{% url 'K-artist-ch' %}" >K</a>
+                    <a href="{% url 'L-artist-ch' %}" >L</a>
+                    <a href="{% url 'M-artist-ch' %}" >M</a>
+                    <a href="{% url 'N-artist-ch' %}" >N</a>
+                    <a href="{% url 'O-artist-ch' %}" >O</a>
+                    <a href="{% url 'P-artist-ch' %}" >P</a>
+                    <a href="{% url 'Q-artist-ch' %}" >Q</a>
+                    <a href="{% url 'R-artist-ch' %}" >R</a>
+                    <a href="{% url 'S-artist-ch' %}" >S</a>
+                    <a href="{% url 'T-artist-ch' %}" >T</a>
+                    <a href="{% url 'U-artist-ch' %}" >U</a>
+                    <a href="{% url 'V-artist-ch' %}" >V</a>
+                    <a href="{% url 'W-artist-ch' %}" >W</a>
+                    <a href="{% url 'X-artist-ch' %}" >X</a>
+                    <a href="{% url 'Y-artist-ch' %}" >Y</a>
+                    <a href="{% url 'Z-artist-ch' %}" >Z</a>
                   </div>
                 </div>
                 <div class="formsearchkarya">
                   <form>
                     <form method="GET" action="">
-                        <input type="text" name="q" placeholder="Search  artist">
+                        <input type="text" name="q" placeholder="找艺术家">
                         <i class="fa fa-search" aria-hidden="true"></i>
                     </form>
                   </form>
@@ -86,13 +86,13 @@
             <div class="{{ Perupa.Panggilan | slice:"1" | lower }}">
                 <div class="row col-md-12">
                     <div class="col-md-2">
-                        <a href="/perupa/{{ Perupa.id }}">
+                        <a href="/ch/artists/{{ Perupa.id }}">
                             <img class="col-12 col-sm-2 col-md-10 px-0" src="/media/{{ Perupa.Gambar }}" alt="">
                         </a>
                     </div>
                     <div class="col-md-7">
                         <h3>
-                            <a href="/perupa/{{ Perupa.id }}">{{ Perupa.Panggilan }}</a>
+                            <a href="/ch/artists/{{ Perupa.id }}">{{ Perupa.Panggilan }}</a>
                         </h3>
                         <p>{{ Perupa.Tempat_Lahir }} {{ Perupa.Tanggal_Lahir }} - {{ Perupa.Tempat_Wafat }} {{ Perupa.Tanggal_Wafat }}</p>
                     </div>
