--- a/chsites/templates/artist/indexlukisan.html
+++ b/chsites/templates/artist/indexlukisan.html
@@ -52,7 +52,7 @@
                 <div class="formsearchkarya">
                   <form>
                     <form method="GET" action="">
-                        <input type="text" name="q" placeholder="Search  artist">
+                        <input type="text" name="q" placeholder="找艺术家">
                         <i class="fa fa-search" aria-hidden="true"></i>
                     </form>
                   </form>
