--- a/chsites/templates/chbase.html
+++ b/chsites/templates/chbase.html
@@ -38,7 +38,7 @@
         <div class="container-fluid">
            <div class="navbar-header">
             <a class="navbar-brand" href="{% url 'homepage-ch' %}">
-              <img src="{% static 'img/logo.jpg' %}">
+              <img src="{% static 'img/logo.png' %}">
             </a>
           </div>
 
@@ -87,21 +87,47 @@
 `
         {% endblock %}
 
-    <footer class="footermenu">
-        <span class="firstfoot">
-          &copy; 2018-2019 Yayasan Singgasana Seni
-        </span>
-        <span>
-          <a href="#">Privacy Policy</a>
-        </span>
-        <span>
-          <a href="#">Sitemap</a>
-        </span>
-        <span class="rightfoot">
-            <label><a href="{% url 'homepage-ch' %}">CH</a>/<a href="{% url 'homepage-en' %}">EN</a>/<a href="{% url 'homepage-views' %}">ID</a></label>
-            <a href="#"><img src="{% static 'img/facebook.jpg' %}"></a>
-            <a href="#"><img src="{% static 'img/instagram.jpg' %}"></a>
-        </span>
+    <footer class="bdfooter footer">
+      <div class="container">
+        <div class="row">
+        <div class="col-md-3 borderfooter">
+          <h4>SINGGASANA <br> SENI </h4><BR>
+          <label class="brown">2019. Yayasan Singgasana seni<Br>All Right Reserved</label>
+        </div>
+        <div class="col-md-2">
+          <ul class="linkfooter nopad">
+            <li><a href="{% url 'Perupa-list' %}">艺术家</a></li>
+            <li><a href="{% url 'karya-list' %}">画廊</a></li>
+            <li><a href="{% url 'istana-negara' %}">宫殿</a></li>
+            <li><a href="#">出版物</a></li>
+            <li><a href="{% url 'berita-list' %}">新闻</a></li>
+            <li><a href="{% url 'tentang-kami' %}">关于我们</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3 borderfooter thcolumn">
+          <a href="#" class="brown">联系</a><br>
+          <a href="#" class="brown">服务期限</a><br>
+          <a href="#" class="brown">隐私政策</a><br>
+        </div>
+        <div class="col-md-2 borderfooter text-center fhcolumn">
+          <h4>跟着我们</h4><Br>
+          <span>
+            <a href="#">Facebook</a><br>
+            <a href="#">Twitter</a><br>
+            <a href="#">Instagram</a>
+          </span>
+        </div>
+        <div class="col-md-2 text-center lscolumn">
+          <h4>语言</h4><br>
+          <span>
+            <a href="/">Indonesia</a><br>
+            <a href="/en">English</a><br>
+            <a href="/ch">China</a><br>
+          </span>
+        </div>
+      </div>
+      </div>
+      <!-- /.container -->
     </footer>
 
 
