--- a/singgasanaseni/templates/base.html
+++ b/singgasanaseni/templates/base.html
@@ -128,16 +128,15 @@
           <a href="#" class="brown">Terms Of Services</a><br>
           <a href="#" class="brown">Privacy Policy</a><br>
         </div>
-        <div class="col-md-2 borderfooter fhcolumn">
+        <div class="col-md-2 borderfooter text-center fhcolumn">
           <h4>FOLLOW US</h4><Br>
           <span>
             <a href="#">Facebook</a><br>
             <a href="#">Twitter</a><br>
-            <a href="#">Instagram</a><br>
-            <a href="#">Rss</a>
+            <a href="#">Instagram</a>
           </span>
         </div>
-        <div class="col-md-2 text-right lscolumn">
+        <div class="col-md-2 text-center lscolumn">
           <h4>BAHASA</h4><br>
           <span>
             <a href="/">Indonesia</a><br>
