--- a/singgasanaseni/templates/karya/index.html
+++ b/singgasanaseni/templates/karya/index.html
@@ -50,23 +50,17 @@
           <div class="row bgkarya">
              <div class="col-md-12 sectionkoleksi">
               <span class="divkoleksi" style="border: none;">
-                <!--h3>Halaman {{ karya.number }}</h3>
-                <!--span class="pagingkarya"-->
-                    <ul class="pagination">
+                    <ul class="row pagination">
                         {% if karya.has_previous %}
                             <a href="?page={{ karya.previous_page_number }}" style="width: 20px; height: auto">{% svg 'back' %}</a>
                         {% endif %}
 
-                    <!--form method="GET" >
-                        <input type="number" name="page" id="formpage">
-                    </form-->  <p>Halaman {{ karya.number }} dari {{ karya.paginator.num_pages }}</p>
+                        <h3 style="height: 32px">Halaman {{ karya.number }}/{{ karya.paginator.num_pages }}</h3>
 
                         {% if karya.has_next %}
                             <a href="?page={{ karya.next_page_number }}" style="width: 20px; height: auto">{% svg 'next' %}</a>
                         {% endif %}
                      </ul>
-
-                <!--/span-->
               </span>
             </div>
 
