--- a/static/css/detail.css
+++ b/static/css/detail.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: 'Garamond Premiere Pro';
+    src: url('fonts/GaramondPremrPro-Capt.eot');
+    src: url('../fonts/GaramondPremrPro-Capt.eot?#iefix') format('embedded-opentype'), url('../fonts/GaramondPremrPro-Capt.woff2') format('woff2'), url('../fonts/GaramondPremrPro-Capt.woff') format('woff'), url('../fonts/GaramondPremrPro-Capt.svg#GaramondPremrPro-Capt') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
 footer {
     position: static !important;
     right: 0;
@@ -38,11 +47,11 @@ footer {
 
 .linkfooter li a{
     color: #000;
-     font-size: 16px;
+     font-size: 14px;
 }
 
  .footer h4{
-    font-size: 16px;
+    font-size: 14px;
 }
 
   footer{
