--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,16 +1,36 @@
-
+@font-face {
+    font-family: 'Garamond Premiere Pro';
+    src: url('fonts/GaramondPremrPro-Capt.eot');
+    src: url('../fonts/GaramondPremrPro-Capt.eot?#iefix') format('embedded-opentype'), url('../fonts/GaramondPremrPro-Capt.woff2') format('woff2'), url('../fonts/GaramondPremrPro-Capt.woff') format('woff'), url('../fonts/GaramondPremrPro-Capt.svg#GaramondPremrPro-Capt') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 
 .centered {
   position: relative;
-  top: 50%;
-  left: 50%;
+  top: 40%;
+  left: 10%;
   margin-top: 0px;
-  margin-left: -150px;
-  line-height: 1.1;
+  margin-left: 0px;
+  line-height: 0.4;
   font-weight: 400;
   font-style: normal;
 }
 
+h5.Perupadetail{
+  font-size: 25px;
+
+
+}
+
+p.Juduldetail{
+    font-size: 15px;
+  font-style: italic;
+  }
+
+p.materialdetail{
+    font-size: 13px;
+  }
 
 .pagination {
   display: flex;
@@ -112,4 +132,73 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+@media only screen and (max-width: 768px) {
+  .centered {
+  position: sticky;
+  top: 50%;
+  left: 50%;
+  margin-top: 1px;
+  margin-left: 0px;
+  line-height: 0.5;
+  font-weight: 400;
+  font-style: normal;
+}
+
+  h5.Perupadetail{
+  font-size: 23px;
+}
+  p.Juduldetail{
+    font-size: 17px;
+  }
+
+  p.materialdetail{
+    font-size: 13px;
+  }
+}
+
+@media only screen and (max-width: 740px) {
+  .centered {
+  top: 5px;
+  left: 10%;
+  margin-top: 1px;
+}
+
+  h5.Perupadetail{
+  font-size: 20px;
+}
+  p.Juduldetail{
+    font-size: 15px;
+  }
+
+  p.materialdetail{
+    font-size: 10px;
+  }
+}
+
+
+
+@media only screen and (max-width: 600px) {
+  .centered {
+  position: sticky;
+  top: 10%;
+  left: 50%;
+  margin-top: 0px;
+  margin-left: 0px;
+  line-height: 0.5;
+  font-weight: 400;
+  font-style: normal;
+}
+
+  h5.Perupadetail{
+  font-size: 20px;
+}
+  p.Juduldetail{
+    font-size: 15px;
+  }
+
+  p.materialdetail{
+    font-size: 10px;
+  }
 }
