memperbaiki static page istana

--- a/singgasanaseni/templates/istana/istanabogor.html
+++ b/singgasanaseni/templates/istana/istanabogor.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "chbase.html" %}
 {% load static %}
 {% block css %}
 <link href="{% static 'css/detail.css' %}" rel="stylesheet">
