menghapus bahasa china

--- a/singgasanaseni/templates/base.html
+++ b/singgasanaseni/templates/base.html
@@ -92,23 +92,6 @@
             {% include "snippets/ga.html" with ga_tracking_id=ga_tracking_id %}
         {% endblock ga %}
 
-    <!--footer class="footermenu">
-        <span class="firstfoot">
-          &copy; 2018-2019 Yayasan Singgasana Seni
-        </span>
-        <span>
-          <a href="#">Privacy Policy</a>
-        </span>
-        <span>
-          <a href="/sitemap.xml">Sitemap</a>
-        </span>
-        <span class="rightfoot">
-            <label><a href="{% url 'homepage-ch' %}">CH</a>/<a href="{% url 'homepage-en' %}">EN</a>/<a href="{% url 'homepage-views' %}">ID</a></label>
-            <a href="#"><img src="{% static 'img/facebook.jpg' %}"></a>
-            <a href="#"><img src="{% static 'img/instagram.jpg' %}"></a>
-        </span>
-    </footer-->
-
     <!-- Footer -->
     <footer class="bdfooter footer">
       <div class="container">
@@ -145,7 +128,7 @@
           <span>
             <a href="/">Indonesia</a><br>
             <a href="/en">English</a><br>
-            <a href="/ch">China</a><br>
+            <!--a href="/ch">China</a><br-->
           </span>
         </div>
       </div>
