--- a/ensites/templates/enbase.html
+++ b/ensites/templates/enbase.html
@@ -90,22 +90,6 @@
 
 
 
-    <!--footer class="footermenu">
-        <span class="firstfoot">
-          &copy; 2018-2019 Yayasan Singgasana Seni
-        </span>
-        <span>
-          <a href="#">Privacy Policy</a>
-        </span>
-        <span>
-          <a href="#">Sitemap</a>
-        </span>
-        <span class="rightfoot">
-            <label><a href="{% url 'homepage-ch' %}">CH</a>/<a href="{% url 'homepage-en' %}">EN</a>/<a href="{% url 'homepage-views' %}">ID</a></label>
-            <a href="#"><img src="{% static 'img/facebook.jpg' %}"></a>
-            <a href="#"><img src="{% static 'img/instagram.jpg' %}"></a>
-        </span>
-    </footer-->
         <footer class="bdfooter footer">
       <div class="container">
         <div class="row">
@@ -141,7 +125,7 @@
           <span>
             <a href="/">Indonesia</a><br>
             <a href="/en">English</a><br>
-            <a href="/ch">China</a><br>
+            <!--a href="/ch">China</a><br-->
           </span>
         </div>
       </div>
